add cover image upload logic
