# src/router/index.ts
@@ -34,7 +34,7 @@ export default (): express.Router => {
 
     // Admin
     router.get('/admin/users', isAuthenticated, isAdmin, adminGetUsers);
-    router.post('/admin/courses', isAuthenticated, isAdmin, adminCreateCourse);
+    router.post('/admin/courses', isAuthenticated, isAdmin, upload.single('coverImage'), adminCreateCourse);
     router.post('/admin/courses/:id/lessons', isAuthenticated, isAdmin, upload.single('video'), adminCreateLesson);
 
     // Exam Management
